--- a/index.html
+++ b/index.html
@@ -7,38 +7,36 @@
     <title>Perifericos</title>
     <link rel="stylesheet" href="css/perifericos.css"type="text/css">
 </head>
-<body bgcolor="#DAFFF7">
+<body bgcolor="#E5E5E5">
         <img id="logo" src="images/pantheon.png">
-        <h1>CENTURY COMPUTERS</h1>
+        <h1>CENTURY - COMPUTERS</h1>
     
-    <div id="borde">
-        <ul class="cat">
-        <li><a href="">☰ CATEGORIAS</a>
-            <ul>
-                <li><a href=""> Teclado</a></li>
-                <li><a href=""> Mouse</a></li>
-                <li><a href=""> Audifonos</a></li>
-                <li><a href=""> Camara Web</a></li>
-                <li><a href=""> MousePad</a></li>
-                <li><a href=""> Microfonos</a></li>
-                <li><a href=""> Mandos</a></li>    
-            </ul>
-        </li>
-        <li><a href=""> FILTRAR ⊞</a>
-            <ul>
-                <li><a href=""> A-Z</a></li>
-                <li><a href=""> PRECIO</a></li>
-                <li><a href=""> MARCA</a></li>
-                <li><a href=""> COLOR</a></li>
-            </ul>
-            </li>
-            <li><a href=""> INICIO</a>
-                <ul>
+        <div id="menu">
+            <ul class="nav">
+                <li><a href=""><h2>&nbsp;CATEGORIAS&nbsp;</h2></a>
+                    <ul>
+                        <li><a href=""> Teclado</a></li>
+                        <li><a href=""> Mouse</a></li>
+                        <li><a href=""> Audifonos</a></li>
+                        <li><a href=""> Camara Web</a></li>
+                        <li><a href=""> MousePad</a></li>
+                        <li><a href=""> Microfonos</a></li>
+                        <li><a href=""> Mandos</a></li>    
+                    </ul>
                 </li>
-        </ul>
-    </div>
-    <div id="carrito">CARRITO<img src=images/carrito.png height="20px"></div>
-    <div id="busqueda"><img src=images/lupa.png height="15px"> <input type="search" placeholder="Búsqueda"></div>
+                <li><a href=""><h2>&nbsp;FILTRAR&nbsp;</h2></a>
+                    <ul>
+                        <li><a href=""> A-Z</a></li>
+                        <li><a href=""> PRECIO</a></li>
+                        <li><a href=""> MARCA</a></li>
+                        <li><a href=""> COLOR</a></li>
+                    </ul>
+                </li>
+                <li><a href=""><h2>&nbsp;INICIO&nbsp;</h2></a></li>
+                <li id="carrito"><a href=""><h2>&nbsp;CARRITO<img src=images/carrito.png height="20px">&nbsp;</h2></a></li>
+                <li><a href=""><h2>&nbsp;BUSCAR&nbsp;</h2></a></li>
+            </ul>
+        </div>
     <div id="container"><hr style="border-color:red;">
         <div id="item1">
             <img class="foto1" src="images/teclado1.jpg" alt="imagen 1" title="Teclado mecanico inalambrico">
@@ -135,6 +133,27 @@
         <div id="item24">
             <img class="foto24" src="images/mando2.jpg" alt="imagen 24" title="Mando DualSense PS5">
             <br clear="bottom">Precio: S/ 320.00 <div class="boton"><p>COMPRAR</p></div>
+        </div>
+        <div id="item25">
+            <img class="foto25" src="images/mousepad4.jpg" alt="imagen 25" title="Mouse pad RGB negro xxl">
+            <br clear="bottom">Precio: S/ 120.00 <div class="boton"><p>COMPRAR</p></div>
+        </div>
+
+        <div class="fot">
+            <hr>
+            <br>
+            <table>
+                <tr>
+                    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;INFORMACION <br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="">Terminos y condiciones</a> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="">Nuestra Empresa</a> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="">Medios de Pagos</a></td>
+                    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CONTACTOS <br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"ventas_CENTURYCOMPUTERS" Facebook <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"CENTURY_COMPUTERS" Instagram <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;999 888 777 WhatsApp</td>
+                    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIGUENOS <br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/face.png" style="width: 40px;">&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/insta.png" style="width: 40px;"></td>
+                </tr>
+            </table>
+            <br>
+            <hr>
+        </div>
+        <div class="copy">
+            Copyright© Importaciones Century Computers. Todos los derechos reservados <br><br>
         </div>
     </div>
 </body>
