--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <li><a href=""> COLOR</a></li>
                     </ul>
                 </li>
-                <li><a href=""><h2>&nbsp;INICIO&nbsp;</h2></a></li>
+                <li><a href="https://julio704.github.io/centurys.github/"><h2>&nbsp;INICIO&nbsp;</h2></a></li>
                 <li id="carrito"><a href=""><h2>&nbsp;CARRITO<img src=images/carrito.png height="20px">&nbsp;</h2></a></li>
                 <li><a href=""><h2>&nbsp;BUSCAR&nbsp;</h2></a></li>
             </ul>
