--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <li><a href="https://julio704.github.io/centurys.github/"><h2>&nbsp;INICIO&nbsp;</h2></a></li>
                 <li id="carrito"><a href=""><h2>&nbsp;CARRITO<img src=images/carrito.png height="20px">&nbsp;</h2></a></li>
                 <li><a href=""><h2>&nbsp;BUSCAR&nbsp;</h2></a></li>
+                <li id="inicio"><a href="index2.html"><img src="images/seciom.png" height="50px"></a></li>
             </ul>
         </div>
     <div id="container"><hr style="border-color:red;">
