--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <div class="info-card">
                         <h4>Teclado Mecanico Inalambrico | NEGRO</h4>
                         <h4 class="cod1">(90DC00B0-B30000)</h4>                        
-                        <p class="precio">$75.71</p>
+                        <h5>$<span class="precio">75.71</span></h5>
                         <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="1">Agregar al carrito</a>
                     </div>
                 </div>
@@ -84,8 +84,8 @@
                     <img src="images/teclado2.jpg" class="imagen-producto u-full-width">
                     <div class="info-card">
                         <h4>HyperX Alloy Origins core Gaming | RGB</h4>
-                        <h4 class="cod1">(MCM-H500M-IHNN-S00)</h4>                      
-                        <p class="precio">$88.33</p>
+                        <h4 class="cod1">(MCM-H500M-IHNN-S00)</h4>
+                        <h5>$<span class="precio">88.33</span></h5>
                         <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="2">Agregar al carrito</a>
                     </div>
                 </div>
@@ -96,7 +96,7 @@
                     <div class="info-card">
                         <h4>Mouse Pad, Hyperx Fury S - pro | NEGRO</h4>
                         <h4 class="cod1">(CC-9011141-WW)</h4>
-                        <p class="precio">$25.24</p>
+                        <h5>$<span class="precio">25.24</span></h5>
                         <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="3">Agregar al carrito</a>
                     </div>
                 </div>
@@ -110,7 +110,7 @@
                     <div class="info-card">
                         <h4>MousePad Corsair MM300 Anti-Fray Gaming | GRIS - XXL | ADERENTE | ABSORBE | el sudor y el liquido</h4>
                         <h4 class="cod1">(MPG SEKIRA 100R)</h4>
-                        <p class="precio">$31.55</p>
+                        <h5>$<span class="precio">31.55</span></h5>
                         <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="4">Agregar al carrito</a>
                     </div>
                 </div>
@@ -121,7 +121,7 @@
                     <div class="info-card">
                         <h4>Audifonos Gamer Void  Elit Wireles B | RGB | CORSAIR</h4>
                         <h4 class="cod1">(3858M30.0001)</h4>
-                        <p class="precio">$126.18</p>
+                        <h5>$<span class="precio">126.18</span></h5>
                         <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="5">Agregar al carrito</a>
                     </div>
                 </div>
@@ -132,7 +132,7 @@
                     <div class="info-card">
                         <h4>Audifonos Logitech G G733 Wireless | RGB - Blanco</h4>
                         <h4 class="cod1">( CC-9011117-WW )</h4>
-                        <p class="precio">$133.75</p>
+                        <h5>$<span class="precio">133.75</span></h5>
                         <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="6">Agregar al carrito</a>
                     </div>
                 </div>
@@ -146,7 +146,7 @@
                     <div class="info-card">
                         <h4>Logitech Webcam Full Hd a 1080p | C270 | 720P</h4>
                         <h4 class="cod1">( GTC80308A )</h4>
-                        <p class="precio">$35.33</p>
+                        <h5>$<span class="precio">35.33</span></h5>
                         <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="7">Agregar al carrito</a>
                     </div>
                 </div>
@@ -157,7 +157,7 @@
                     <div class="info-card">
                         <h4>Mouse Logitech G203 Lightsync  8000 | dpi</h4>
                         <h4 class="cod1">( 2210-17090105 )</h4>
-                        <p class="precio">$53.00</p>
+                        <h5>$<span class="precio">53.00</span></h5>
                         <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="8">Agregar al carrito</a>
                     </div>
                 </div>
@@ -168,7 +168,7 @@
                     <div class="info-card">
                         <h4>Hyperx Pulsefire Surge |COLORS - BLACK  | RGB</h4>
                         <h4 class="cod1">( CC-9011130-WW )</h4>
-                        <p class="precio">$65.62</p>
+                        <h5>$<span class="precio">65.62</span></h5>
                         <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="9">Agregar al carrito</a>
                     </div>
                 </div>
@@ -182,7 +182,7 @@
                     <div class="info-card">
                         <h4>Microfono HYPERX Quadcast | NEGRO - ANTITOP</h4>
                         <h4 class="cod1">( GTA80818A )</h4>
-                        <p class="precio">$113.56</p>
+                        <h5>$<span class="precio">113.56</span></h5>
                         <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="10">Agregar al carrito</a>
                     </div>
                 </div>
@@ -193,7 +193,7 @@
                     <div class="info-card">
                         <h4>Microfono Streaming Redragon Blazar | TRIPODE</h4>
                         <h4 class="cod1">( GTA80818A )</h4>
-                        <p class="precio">$93.38</p>
+                        <h5>$<span class="precio">93.38</span></h5>
                         <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="11">Agregar al carrito</a>
                     </div>
                 </div>
@@ -204,7 +204,7 @@
                     <div class="info-card">
                         <h4>Razer Blackwidow V3 Teclado Mecánico Switch Amarillo | RGB</h4>
                         <h4 class="cod1">( SPARTA 848 )</h4>
-                        <p class="precio">$118.86</p>
+                        <h5>$<span class="precio">118.86</span></h5>
                         <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="12">Agregar al carrito</a>
                     </div>
                 </div>
@@ -218,7 +218,7 @@
                     <div class="info-card">
                         <h4>Mouse Gamer VSG Aquila Fly | Blanco Brillante</h4>
                         <h4 class="cod1">( GTA80818A )</h4>
-                        <p class="precio">$27.76</p>
+                        <h5>$<span class="precio">27.76</span></h5>
                         <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="13">Agregar al carrito</a>
                     </div>
                 </div>
@@ -229,7 +229,7 @@
                     <div class="info-card">
                         <h4>Mouse Razer Deathadder V2 | Chroma Black</h4>
                         <h4 class="cod1">( GTA80818A )</h4>
-                        <p class="precio">$75.71</p>
+                        <h5>$<span class="precio">75.71</span></h5>
                         <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="14">Agregar al carrito</a>
                     </div>
                 </div>
@@ -240,7 +240,7 @@
                     <div class="info-card">
                         <h4>Audifonos HyperX Cloud Alpha | RED</h4>
                         <h4 class="cod1">( SPARTA 848 )</h4>
-                        <p class="precio">$70.66</p>
+                        <h5>$<span class="precio">70.66</span></h5>
                         <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="15">Agregar al carrito</a>
                     </div>
                 </div>
@@ -253,7 +253,7 @@
                     <div class="info-card">
                         <h4>RAZER Kraken X USB | NEGRO - VERDE RGB</h4>
                         <h4 class="cod1">( GTA80818A )</h4>
-                        <p class="precio">$116.09</p>
+                        <h5>$<span class="precio">116.09</span></h5>
                         <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="16">Agregar al carrito</a>
                     </div>
                 </div>
@@ -264,7 +264,7 @@
                     <div class="info-card">
                         <h4>WebCam REDRAGON Hitman 1080p | GRIS</h4>
                         <h4 class="cod1">( GTA80818A )</h4>
-                        <p class="precio">$24.98</p>
+                        <h5>$<span class="precio">24.98</span></h5>
                         <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="17">Agregar al carrito</a>
                     </div>
                 </div>
@@ -275,7 +275,7 @@
                     <div class="info-card">
                         <h4>Camara Web GENIUS FACECAM 1000X | NEGRO - GRIS</h4>
                         <h4 class="cod1">( SPARTA 848 )</h4>
-                        <p class="precio">$20.19</p>
+                        <h5>$<span class="precio">20.19</span></h5>
                         <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="18">Agregar al carrito</a>
                     </div>
                 </div>
@@ -288,7 +288,7 @@
                     <div class="info-card">
                         <h4>GM200 Micrófono REDRAGON QUASAR | ANTIPOP</h4>
                         <h4 class="cod1">( GTA80818A )</h4>
-                        <p class="precio">$60.57</p>
+                        <h5>$<span class="precio">60.57</span></h5>
                         <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="19">Agregar al carrito</a>
                     </div>
                 </div>
@@ -299,7 +299,7 @@
                     <div class="info-card">
                         <h4>Microfono LOGITECH BLUE YETI NANO  | SHADOW - GRAY</h4>
                         <h4 class="cod1">( GTA80818A )</h4>
-                        <p class="precio">$151.42</p>
+                        <h5>$<span class="precio">151.42</span></h5>
                         <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="20">Agregar al carrito</a>
                     </div>
                 </div>
@@ -310,7 +310,7 @@
                     <div class="info-card">
                         <h4>Mando para Ps3 | PlayStation 3 | NEGRO</h4>
                         <h4 class="cod1">( SPARTA 848 )</h4>
-                        <p class="precio">$14.89</p>
+                        <h5>$<span class="precio">14.89</span></h5>
                         <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="21">Agregar al carrito</a>
                     </div>
                 </div>
@@ -338,6 +338,7 @@
         </div>
     </footer>
 </main>
-    <script src="js/app.js"></script>
+    <script src="js/carrito.js"></script>
+    <script src="js/pedido.js"></script>
 </body>
 </html>
