--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
                 <div class="barraPrincipal">
                     <nav class="navegacion">
                         <ul class="menu1">
-                            <li><a href="#">Inicio</a></li>
-                            <li><a href="#">Procesadores</a></li>
-                            <li><a href="#">RAM</a></li>
-                            <li><a href="#">Case</a></li>
-                            <li><a href="#">Tarjeta de Video</a></li>
-                            <li><a href="#">Placa Base</a></li>
-                            <li><a href="#">Fuente de Poder</a></li>
-                            <li><a href="#">Perifericos</a></li>
+                            <li><a href="https://julio704.github.io/centurys.github/">Inicio</a></li>
+                            <li><a href="https://adrianfasa.github.io/procesadores/index.html">Procesadores</a></li>
+                            <li><a href="https://adrianfasa.github.io/ram/">RAM</a></li>
+                            <li><a href="https://pierosl.github.io/proyecto3/">Case</a></li>
+                            <li><a href="https://miguel05hb.github.io/Tarjeta-de-videos/">Tarjeta de Video</a></li>
+                            <li><a href="https://adrianfasa.github.io/placabase/">Placa Base</a></li>
+                            <li><a href="https://adrianfasa.github.io/monitores/">Monitores</a></li>
+                            <li><a href="index.html">Perifericos</a></li>
                         </ul>
                     </nav>
                 </div>
