--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                             <li><a href="https://miguel05hb.github.io/Tarjeta-de-videos/">Tarjeta de Video</a></li>
                             <li><a href="https://adrianfasa.github.io/placabase/">Placa Base</a></li>
                             <li><a href="https://adrianfasa.github.io/monitores/">Monitores</a></li>
-                            <li><a href="index.html">Perifericos</a></li>
+                            <li><a href="#">Perifericos</a></li>
                         </ul>
                     </nav>
                 </div>
